# specter

./: .gitignore  .release  AUTHORS  ChangeLog  LICENSE.txt  MANIFEST.in  README.md  paused.conf  requirements.txt  settings.toml  setup.cfg  setup.py  specter.py  tox.ini
.github/workflows/: specter-deploy.yml  specter-pr.yml  specter.yml
input/ip_lists/: clean_target_list.txt  exclude.txt  site_name.txt  target.txt  web_scan_ip.txt
input/operation/: common_ports.csv  scan.csv
output/enumeration/: ea60test_2020-07-25_13-06-04.txt  ea60test_2020-07-25_13-07-21.txt  ea60test_2020-07-25_13-08-56.txt  ea60test_2020-07-29_12-02-49.txt
output/hosts/: 10.0.0.13.txt  10.0.0.3.txt  10.0.0.4.txt  192.168.50.158.txt  192.168.50.159.txt  192.168.50.162.txt  192.168.50.218.txt  192.168.50.219.txt  192.168.50.34.txt  hostIP.txt  xml_ips.txt
output/ports/: 443_.txt  445_.txt  8443_.txt  ports.txt
output/web_reports/eyewitness/: Requests.csv  ew.db  open_ports.csv  report.html
output/web_reports/eyewitness/source/: http.192.168.50.34.txt
output/xml/: masscan.csv  masscan.xml  masscan_xml_parser.py
samples/: settings.sample.toml
specter/: config.py  enums.py  exceptions.py  specter.py
specter/commands/: __init__.py  abstract.py  clean_list.py  init.py  tree.py  web_scan.py  xml_scan.py
specter/samples/: exclude_list.txt  nmap_target_list.sample.txt  settings.sample.toml
specter/utils/: __init__.py  log.py  tree.py  workdir.py
