[metadata]
name = specter
summary = Kali Linux Scanning Tool
description-file = README.md
author = Mike Dozier
author-email = doziermt@gmail.com
home-page = https://github.com/doziermt/specter

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    specter

[entry_points]
console_scripts =
    specter = specter.specter:main
